# job-finder-worker

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PLAN-claude-to-gemini-migration.md  PLAN-company-source-separation.md  PLAN-job-listings-refactor.md  PLAN-self-healing-data-system.md  PLAN.md  README.md  SECURITY.md  file:jobfinder-e2e-182643-1763511731537?mode=memory&cache=shared  file:jobfinder-e2e-2456681-1763481470841?mode=memory&cache=shared  file:jobfinder-e2e-2562319-1763483345484?mode=memory&cache=shared  file:jobfinder-e2e-2638290-1763484323995?mode=memory&cache=shared  file:jobfinder-e2e-2687129-1763485145918?mode=memory&cache=shared  file:jobfinder-e2e-2931042-1763488948241?mode=memory&cache=shared  file:jobfinder-e2e-3820301-1763504728073?mode=memory&cache=shared  file:jobfinder-e2e-3847931-1763504893680?mode=memory&cache=shared  file:jobfinder-e2e-3997591-1763507001619?mode=memory&cache=shared  file:jobfinder-e2e-4027860-1763507405736?mode=memory&cache=shared  file:jobfinder-e2e-4134898-1763508437757?mode=memory&cache=shared  file:jobfinder-e2e-4157612-1763508635475?mode=memory&cache=shared  file:jobfinder-e2e-42736-1763509470276?mode=memory&cache=shared  file:jobfinder-e2e-633258-1763520115234?mode=memory&cache=shared  package-lock.json  package.json  tsconfig.e2e.json  vitest.config.e2e.ts
job-finder-worker/: .dockerignore  .env.example  .env.production.example  .env.staging.example  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATABASE_SCRIPT_SAFETY.md  DEPLOYMENT.md  DOCKER_COMPOSE_GUIDE.md  DOCUMENTATION_INDEX.md  Dockerfile  Dockerfile.dev  FIRESTORE_INDEXES.md  FLASK_DEPLOYMENT.md  FLASK_MIGRATION_COMPLETE.txt  FLASK_MIGRATION_SUMMARY.md  JOB_FINDER_WORKER_INVENTORY.md  LICENSE  LOCAL_DEVELOPMENT.md  Makefile  (+20 more)
(+1870 files in other folders)
